<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_12dp">

    <TextView
        android:id="@+id/actorsNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/petsListTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actorsSurnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/surname"
        app:layout_constraintBottom_toTopOf="@+id/petsListTextView"
        app:layout_constraintStart_toEndOf="@+id/actorsNameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/actorsAgeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/petsListTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/actorsSurnameTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/petsListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_name"
        app:layout_constraintBottom_toTopOf="@+id/moviesIdTextView"
        app:layout_constraintStart_toStartOf="@id/actorsNameTextView"
        app:layout_constraintTop_toBottomOf="@id/actorsNameTextView" />

    <TextView
        android:id="@+id/moviesIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/petsListTextView"
        app:layout_constraintTop_toBottomOf="@id/petsListTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>