<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_400dp"
    android:layout_height="@dimen/_150dp">

    <TextView
        android:id="@+id/actorIdInDialogTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actor_id"
        app:layout_constraintBottom_toTopOf="@id/movieNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/movieNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/imdbRateEditText"
        app:layout_constraintStart_toStartOf="@id/actorIdInDialogTV"
        app:layout_constraintTop_toBottomOf="@id/actorIdInDialogTV" />

    <EditText
        android:id="@+id/imdbRateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imdb_rate"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/addMovieDialogButton"
        app:layout_constraintStart_toStartOf="@id/movieNameEditText"
        app:layout_constraintTop_toBottomOf="@id/movieNameEditText" />


    <Button
        android:id="@+id/addMovieDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movie"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imdbRateEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>