<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_12dp">

    <TextView
        android:id="@+id/actorIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/actor_id"
        app:layout_constraintBottom_toTopOf="@id/actorNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/actorNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/actor_name"
        app:layout_constraintBottom_toTopOf="@+id/movieNameTextView"
        app:layout_constraintStart_toStartOf="@id/actorIdTextView"
        app:layout_constraintTop_toBottomOf="@id/actorIdTextView" />

    <TextView
        android:id="@+id/movieNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/actorNameTextView"
        app:layout_constraintStart_toStartOf="@id/actorNameTextView"
        app:layout_constraintTop_toBottomOf="@id/moviesIMDBRateTextView" />

    <TextView
        android:id="@+id/moviesIMDBRateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/imdb_rate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/movieNameTextView"
        app:layout_constraintTop_toBottomOf="@id/movieNameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>