<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12dp"
    tools:context=".ui.MoviesFragment">

    <EditText
        android:id="@+id/movieNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/imdbRateEditTextEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imdbRateEditTextEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imdb_rate"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/addMovieButton"
        app:layout_constraintStart_toStartOf="@id/movieNameEditText"
        app:layout_constraintTop_toBottomOf="@id/movieNameEditText" />


    <Button
        android:id="@+id/addMovieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movie"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imdbRateEditTextEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>